# vecmap

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/: benchmark_chart.py
bindings/: graph_bindings.cu  similarity_bindings.cu
cli/: main.py
cli/commands/: analyze.py  benchmark.py  report.py
examples/: generate_examples.py  sample_knowledge_graph.dot  sample_output.txt
graph/: builder.py
kernels/graph/: bfs.cu  dijkstra.cu  floyd_warshall.cu  kruskal_mst.cu  pagerank.cu  threshold_filter.cu  topological_sort.cu
kernels/similarity/: cosine_naive.cu  cosine_tiled.cu  cosine_warp.cu
output/: gap_report.py  knowledge_graph.py  matrix.py  rankings.py
pipeline/: embedder.py  gpu_pipeline.py  parser.py  scraper.py
tests/: conftest.py  test_cli.py  test_graph_builder.py  test_output.py
